[tool.poetry]
name = "mdPDFinator"
version = "1.0.0"
description = "This converts markdown to pdf"
authors = ["Yash Jain <hello@yashj.ca>"]
license = "GPL-3.0 license"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fire = "^0.5.0"
markdown2 = "^2.4.10"
weasyprint = "^60.1"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
